-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.10.0
-
None
-
Lustre: Build Version: 2.10.0_5_gbb3c407
-
3
-
9223372036854775807
When mount -t lustre ... has failed to actually mount a target, the exit code of mount does not reflect this:
# mount -t lustre zfs_pool_scsi0QEMU_QEMU_HARDDISK_disk13/MGS /mnt/MGS e2label: No such file or directory while trying to open zfs_pool_scsi0QEMU_QEMU_HARDDISK_disk13/MGS Couldn't find valid filesystem superblock. # echo $? 0
This of course wreaks havoc on systems such as IML which rely on the exit code of one step in the process of starting a filesystem to decide if it should continue with subsequent steps.
- is duplicated by
-
LU-9853 mount.lustre noisy on mount
-
- Resolved
-